mon-pix/app/styles/components/_feedback-panel-v3.scss
.feedback-panel-v3 {
  margin-bottom: $pix-spacing-xl;
  color: $pix-neutral-70;
  font-size: 0.875rem;
  font-family: $font-roboto;

  &__refresh-info {
    display: flex;
    gap: 16px;
    align-items: center;
    font-weight: $font-bold;

    p {
      min-width: fit-content;
    }

    button {
      display: flex;
      gap: $pix-spacing-xxs;
      align-items: center;
      margin: 0;
      padding: 0;
      color: $pix-primary;
      font-weight: $font-bold;
    }
  }
}

/* "Link" view
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.feedback-panel-v3__open-button {
  display: flex;
  gap: $pix-spacing-xxs;
  align-items: center;
  width: 100%;
  margin-top: $pix-spacing-s;
  padding: 0.75rem 0;
  line-height: 20px;
  text-align: left;
  text-decoration: underline;

  svg {
    margin-right: $pix-spacing-xxs;
  }

  &[aria-expanded='true'] {
    color: $pix-neutral-90;
  }
}

.feedback-panel-v3__open-button:hover,
.feedback-panel-v3__open-button:focus-visible,
.feedback-panel-v3__open-button:active {
  color: $pix-primary;
}

.feedback-panel-v3__view {
  display: flex;
  gap: 24px;
  font-weight: $font-bold;
}

.feedback-panel-v3__action-buttons {
  display: flex;
  gap: 16px;

  > button {
    text-decoration: underline;

    &:first-of-type {
      color: $pix-error-70;
      font-weight: $font-bold;
      text-decoration-color: $pix-error-70;
    }
  }
}

.feedback-panel-v3__information {
  margin-top: $pix-spacing-s;
}

